@@ -152,8 +152,25 @@ BEGIN
 		IF v_count = 2 THEN
 
 			-- Get both arc features
-			SELECT * INTO v_record1 FROM ve_arc WHERE (node_1 = v_node_id OR node_2 = v_node_id) AND state > 0 ORDER BY arc_id DESC LIMIT 1;
-			SELECT * INTO v_record2 FROM ve_arc WHERE (node_1 = v_node_id OR node_2 = v_node_id) AND state > 0 ORDER BY arc_id ASC LIMIT 1;
+			IF v_project_type = 'UD' THEN
+				-- node to fusion must be node_2 upstream and node_1 downstream
+				SELECT * INTO v_record1 FROM ve_arc WHERE (node_2 = v_node_id) AND state > 0 ORDER BY arc_id DESC LIMIT 1;
+				SELECT * INTO v_record2 FROM ve_arc where (node_1 = v_node_id) AND state > 0 ORDER BY arc_id ASC LIMIT 1;
+
+				IF (v_record1 is null) or (v_record2 is null) then
+					EXECUTE 'SELECT gw_fct_getmessage($${"data":{"message":"4362", "function":"2112", "is_process":true}}$$)';
+				END IF;
+				
+			ELSIF v_project_type = 'WS' THEN
+				-- any combination of node_1/node_2 is accepted
+				WITH arcs AS (SELECT * FROM arc WHERE (node_1 = v_node_id OR node_2 = v_node_id) 
+				AND state > 0 ORDER BY arc_id)
+				SELECT * INTO v_record1 FROM arcs LIMIT 1;
+				
+				WITH arcs AS (SELECT * FROM arc WHERE (node_1 = v_node_id OR node_2 = v_node_id) 
+				AND state > 0 ORDER BY arc_id)
+				SELECT * INTO v_record2 FROM arcs OFFSET 1 LIMIT 1;
+			END IF;
 
 			-- Check psector compatibility based on mode
 			IF v_plan_mode = true THEN
